# ML_system_end_to_end

./: .gitignore  README.md  basic.py  justfile  logging.conf  mlflow.db  pyproject.toml
.metaflow/Introduction/: latest_run
.metaflow/Introduction/1769009794342819/_meta/: _self.json
.metaflow/Introduction/1769009794342819/_parameters/0/: 0.attempt.json  0.data.json
.metaflow/Introduction/1769009794342819/_parameters/_meta/: _self.json
.metaflow/Introduction/1769009794342819/end/4/: 0.attempt.json  0.data.json
.metaflow/Introduction/1769009794342819/end/_meta/: _self.json
.metaflow/Introduction/1769009794342819/start/1/: 0.attempt.json  0.data.json
.metaflow/Introduction/1769009794342819/start/_meta/: _self.json
.metaflow/Introduction/1769009794342819/step_a/2/: 0.attempt.json  0.data.json
.metaflow/Introduction/1769009794342819/step_a/_meta/: _self.json
.metaflow/Introduction/1769009794342819/step_b/3/: 0.attempt.json  0.data.json
.metaflow/Introduction/1769009794342819/step_b/_meta/: _self.json
.metaflow/Introduction/_meta/: _self.json
.metaflow/Parameters/: latest_run
.metaflow/Parameters/1769011127673221/_meta/: _self.json
.metaflow/Parameters/1769011127673221/_parameters/0/: 0.attempt.json  0.data.json
.metaflow/Parameters/1769011127673221/_parameters/_meta/: _self.json
.metaflow/Parameters/1769011127673221/end/2/: 0.attempt.json  0.data.json
.metaflow/Parameters/_meta/: _self.json
src/Pipelines/: training.py
src/common/: pipeline.py
src/inference/: backend.py  model.py
(+226 files in other folders)
