[project]
name = "end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "keras>=3.13.1",
    "metaflow>=2.19.16",
    "metaflow-card-html>=1.0.2",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "pylint>=3.3.2",
    "pytest>=8.3.4",
    "evidently>=0.7.4,<0.8.0",
    "faiss-cpu>=1.11.0.post1",
    "pytest-asyncio>=1.2.0",
    "tensorflow>=2.21.0",
]
